Android Backend first functionality works

--- a/project-android/res/xml/config.xml
+++ b/project-android/res/xml/config.xml
@@ -49,7 +49,9 @@
     <plugin name="Capture" value="org.apache.cordova.Capture"/>
     <plugin name="Battery" value="org.apache.cordova.BatteryListener"/>
     <plugin name="SplashScreen" value="org.apache.cordova.SplashScreen"/>
-    <plugin name="Echo" value="org.apache.cordova.Echo" />
+    <plugin name="Echo" value="org.apache.cordova.plugin.Echo" />
+    <plugin name="Test" value="org.apache.cordova.plugin.Test" />
+    <plugin name="UdpController" value="org.apache.cordova.plugin.UdpController" />
     <plugin name="Globalization" value="org.apache.cordova.Globalization"/>
     <plugin name="InAppBrowser" value="org.apache.cordova.InAppBrowser"/>
 </plugins>
