--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,14 +15,18 @@ body {
 	color: #999999;
 	width:100%;
 	top: -20px;
+	left: -10px;
 	background-color: #333333;
 }
 .socket_control{
+	position: relative;
 	width: 100%;
+	margin-top: -25px;
+    left: -10px;
 }
 
 #socket_control button{
-	width: 95%; 
+	width: 90%; 
 	text-align: left; 
 }
 
@@ -32,9 +36,10 @@ body {
 
 #socket_name{
 	display: inline; 
+	position:absolute;
+	margin-top: 15px; /* 0.5*50px - 0.5*20px (half of button height - half of font-size)*/
 	margin-left: 30px; 
-	min-width:90%;
-	margin-right: 50px;
+	font-size: 20px;
 }
 
 #socket_device_icon{
@@ -45,26 +50,66 @@ body {
 	float:right;
 }
 
-#menu_select ul {
+#menu_tabs {
+	margin: 40px 0 0 -50px;
+}
+
+#menu_tabs ul{
+	list-style: none;
+}
+
+#menu_tabs ul li{
+	display: inline;
+	float: left;
+	padding:10px 20% 30px 10px;
+	background: rgba(0,0,0,0.3);
+	-moz-border-radius-topleft: 12px; 
+    -moz-border-radius-topright: 12px; 
+    -webkit-border-top-left-radius:12px;
+    -webkit-border-top-right-radius:12px;
+}
+
+#menu_tabs ul li a{
+	position:relative;
+	height: 50px;
+	position: relative;
+	text-decoration: none; 
+	font: bold; 
+	color: #808080;
+    text-shadow: #303030 0px 0px 2px;
+
+}
+
+#menu_tabs ul li.active {
+	background: rgba(255,255,255, 0.8);
+	color: #000000;
+	text-shadow: #FFFFFF 0px 0px 2px;
+}
+
+#actions{
+	
+}
+
+/*#menu_tabs ul {
 	list-style: none;
 	padding:0;
 	margin:0;
 }
 
-#menu_select li {
+#menu_tabs li {
 	float: left;
 	border: 1px solid;
 	border-bottom-width: 0;
 	margin: 0 0.5em 0 0;
 }
 
-#menu_select li a{
+#menu_tabs li a{
 	padding: 0 1em;
 }
 
-#menu_select #selected {
+#menu_tabs #selected {
 
-}
+}*/
 
 .event.listening {
     background-color:#333333;
@@ -72,7 +117,7 @@ body {
 }
 
 .event.received {
-    background-color: #4B946A;
+    background-color: #333333;/*#4B946A;*/
     display:none;
 }
 
