--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@ body {
 	top: -2%;
 	left: -10px;
 	background-color: #333333;
-	font-size: 40%;
+	font-size: 40%;`
 }
 .socket_control{
 	position: relative;
