--- a/project-android/assets/www/src/css/style.css
+++ b/project-android/assets/www/src/css/style.css
@@ -104,6 +104,7 @@ body {
 */
 @media only screen 
 and (min-device-width: 250px)
+and (max-device-width: 400px)
 {
 	.statusbar{
 		margin-bottom: 10%;
@@ -125,6 +126,10 @@ and (min-device-width: 250px)
 	#socket_device_icon{
 		margin-right: 0em;
 	}
+	
+	#menu_tabs {
+		font-size: 45%;
+	}
 }
 
 /*
@@ -144,6 +149,10 @@ and (min-device-width : 480px)
 	
 	#socket_control button{
 		margin-bottom: 10px;
+	}
+	
+	#menu_tabs {
+		font-size: 105%;
 	}
 }
 
