--- a/project-android/assets/www/src/css/style.css
+++ b/project-android/assets/www/src/css/style.css
@@ -156,6 +156,46 @@ and (min-device-width : 480px)
 	}
 }
 
+/*
+ * CSS for devices with iPhone screen.
+*/
+@media only screen 
+and (min-device-width: 640px)
+{
+	.statusbar{
+		margin-bottom: 10%;
+	}
+	
+	#socket_name{
+		display: inline; 
+		position:absolute;
+		margin-left: 3%; 
+		font-size:100%;
+		margin-top: 6%;
+	}
+	
+	#socket_control button{
+		height: -10px;
+	}
+	
+	.socket_control{
+		margin-top: -25px;
+	    left: -10px;
+	}
+	
+	#socket_control button{
+		margin-top: -5px;
+	}
+	
+	#socket_device_icon{
+		margin-right: 0em;
+	}
+	
+	#menu_tabs {
+		font-size: 45%;
+	}
+}
+
 
 .event.listening {
     background-color:#333333;
