--- a/project-android/assets/www/src/css/style.css
+++ b/project-android/assets/www/src/css/style.css
@@ -158,6 +158,7 @@ and (min-device-width : 480px)
 
 /*
  * CSS for devices with iPhone screen.
+ * hihi
 */
 @media only screen 
 and (min-device-width: 640px)
