--- a/project-android/res/xml/config.xml
+++ b/project-android/res/xml/config.xml
@@ -52,6 +52,7 @@
     <plugin name="Echo" value="org.apache.cordova.plugin.Echo" />
     <plugin name="Test" value="org.apache.cordova.plugin.Test" />
     <plugin name="UdpController" value="org.apache.cordova.plugin.UdpController" />
+    <plugin name="UPnPController" value="org.apache.cordova.plugin.UPnPController"/>
     <plugin name="Globalization" value="org.apache.cordova.Globalization"/>
     <plugin name="InAppBrowser" value="org.apache.cordova.InAppBrowser"/>
 </plugins>
