--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,8 +91,7 @@ p{
 #menu_tabs {
 	width:100%;
 	float: left;
-	height: auto !important;
-	height:30%;
+	height: 10%;
 	font-size: 45%;
 }
 
@@ -113,7 +112,7 @@ p{
 }
 
 .menu_tab img{
-		height:70%;
+	height:70%;
 }
 
 #menu_tabs table tr td{
@@ -124,10 +123,41 @@ p{
     -webkit-border-top-right-radius:12px;
 }
 
+#menu.show
+{
+	-webkit-transition: -webkit-transform 2s linear;
+    -webkit-transform: translateY(0%);
+}
+
+#menu.hide
+{
+	-webkit-transition: -webkit-transform 2s linear;
+ 	-webkit-transform: translateY(90%);
+}
+#menu{
+	bottom: 0px;
+	width:100%;
+	height:60%;
+	position:absolute;
+}
+
+
 #menu_tabs table tr td a{
-	height: 50px;
+	height:100%;
 	text-decoration: none; 
 	color: #111111;
+}
+
+#menu_tabs table tr td{
+	height:100%;
+}
+
+#menu_tabs table tr{
+	height:100%;
+}
+
+#menu_tabs table{
+	height:100%;
 }
 
 #menu_tabs table tr td.active {
