--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,7 +91,8 @@ p{
 #menu_tabs {
 	width:100%;
 	float: left;
-	height: 10%;
+	height: auto !important;
+	height:30%;
 	font-size: 45%;
 }
 
@@ -107,12 +108,12 @@ p{
 .menu_tab{
 	display: inline-block;
 	width: 100%;
-	font-size: 150%;
+	font-size: 130%;
 	font: bold; 
 }
 
 .menu_tab img{
-	height:70%;
+		height:30px;
 }
 
 #menu_tabs table tr td{
@@ -121,6 +122,20 @@ p{
     -moz-border-radius-topright: 12px; 
     -webkit-border-top-left-radius:12px;
     -webkit-border-top-right-radius:12px;
+}
+
+#menu_tabs table tr td a{
+	text-decoration: none; 
+	color: #111111;
+}
+
+#menu_tabs table tr td.active {
+	background: rgba(255,255,255, 0.8);
+}
+
+#menu_tabs table tr td.active a{
+	color: #505050;
+	text-shadow: #FFF 2px 2px 2px;
 }
 
 #menu.show
@@ -132,41 +147,14 @@ p{
 #menu.hide
 {
 	-webkit-transition: -webkit-transform 2s linear;
- 	-webkit-transform: translateY(90%);
+ 	-webkit-transform: translateY(80%);
 }
 #menu{
+    background-color:#404040;
 	bottom: 0px;
 	width:100%;
 	height:60%;
 	position:absolute;
-}
-
-
-#menu_tabs table tr td a{
-	height:100%;
-	text-decoration: none; 
-	color: #111111;
-}
-
-#menu_tabs table tr td{
-	height:100%;
-}
-
-#menu_tabs table tr{
-	height:100%;
-}
-
-#menu_tabs table{
-	height:100%;
-}
-
-#menu_tabs table tr td.active {
-	background: rgba(255,255,255, 0.8);
-}
-
-#menu_tabs table tr td.active a{
-	color: #505050;
-	text-shadow: #FFF 2px 2px 2px;
 }
 
 .menu_dosen_table{
