--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,18 +91,11 @@ p{
 #menu_tabs {
 	width:100%;
 	float: left;
-	height: auto !important;
-	height:30%;
-	font-size: 45%;
 }
 
 .menu_table{
 	width: 100%;
 	border: 0;
-}
-
-.menu_table tr{
-	line-height: 10px;
 }
 
 .menu_tab{
@@ -113,7 +106,7 @@ p{
 }
 
 .menu_tab img{
-		height:30px;
+	height:30px;
 }
 
 #menu_tabs table tr td{
@@ -125,6 +118,8 @@ p{
 }
 
 #menu_tabs table tr td a{
+    height:10%;
+    margin:10%;
 	text-decoration: none; 
 	color: #111111;
 }
@@ -140,20 +135,20 @@ p{
 
 #menu.show
 {
-	-webkit-transition: -webkit-transform 2s linear;
+	-webkit-transition: -webkit-transform 1s linear;
     -webkit-transform: translateY(0%);
 }
 
 #menu.hide
 {
-	-webkit-transition: -webkit-transform 2s linear;
- 	-webkit-transform: translateY(80%);
+	-webkit-transition: -webkit-transform 1s linear;
+ 	-webkit-transform: translateY(90%);
 }
 #menu{
     background-color:#404040;
 	bottom: 0px;
 	width:100%;
-	height:60%;
+	height:100%;
 	position:absolute;
 }
 
