--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,295 +2,119 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color:  rgba(64, 64, 64, 0.3);
     background-color:#404040;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:200%;
-    text-align:center;
-    margin:0px;
+    margin:0em;
+    height:100%;
 }
 
 .statusbar{
-	position:relative;
+	display:inline-block;
 	color: #999999;
 	width:100%;
 	background-color: #333333;
-	font-size: 40%;
-}
-
-tbody{
-	vertical-align: middle;
-}
-
-p{
-	margin:0px;
+	text-align:center;
 }
 
 .socket_control{
-	position: relative;
 	width: 100%;
-	margin-top: 1%;
 }
 
-#socket_control a{
-	width: 70%;
-	text-align: left;
-}
-
-.fancy_socket_button {
-    -moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
-    -webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
-    box-shadow:inset 0px 0px 0px 0px #ffffff;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-    background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed',       endColorstr='#dfdfdf');
-    background-color:#ededed;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
-    display:inline-block;
-    color:#777777;
-    font-family:arial;
-    font-size:50%;
-    font-weight:bold;
-    margin: 2%;
-    padding: 0px 0px 0px 0px;
-    text-decoration:none;
-    height:100%;
-    text-shadow:1px 1px 0px #ffffff;
-}
-
-.fancy_socket_button:active {
-	position:relative;
-	top:1px;
-}
-
-.socket_status_picture{
-	display: inline;
-	height: 5%;
-	margin-top: 3px;
-	margin-left: 2px;
-}
-
-.socket_name{
-	display: inline;
-	position:absolute;
-	margin-left: 3%;
-	margin-top: 2%;
-}
-
-.socket_device_icon{
-	height: 5%;
-	position: static;
-	display: inline;
-	float: right;
-	margin-top: 3px;
-	margin-right: 3px;
-}
-
-#menu_tabs {
-	width:100%;
-	height:15%;
-	float: left;
-    font-size:45%;
-}
-
-.menu_table{
-	width: 100%;
-	height:100%;
-	border: 0;
-}
-
-.menu_tab{
-	width: 100%;
-	font: bold; 
-}
-
-.menu_tab img{
-	height:20px;
-}
-
-#menu_tabs table tr td{
-	background: rgba(0,0,0,0.3);
-	-moz-border-radius-topleft: 12px; 
-    -moz-border-radius-topright: 12px; 
-    -webkit-border-top-left-radius:12px;
-    -webkit-border-top-right-radius:12px;
-}
-
-#menu_tabs table tr td a{
-    text-decoration: none;
-	color: #111111;
-}
-
-#menu_tabs table tr td.active {
-	background: rgba(255,255,255, 0.8);
-}
-
-#menu_tabs table tr td.active a{
-	color: #505050;
-	text-shadow: #FFF 2px 2px 2px;
-}
-
-#menu.show
-{
-	-webkit-transition: -webkit-transform 1s linear;
-    -webkit-transform: translateY(0%);
-}
-
-#menu.hide
-{
-	-webkit-transition: -webkit-transform 1s linear;
- 	-webkit-transform: translateY(85%);
-}
-#menu{
-    background-color:#404040;
-	bottom: 0px;
-	width:100%;
-	height:100%;
-	position:absolute;
-}
-
-.menu_dosen_table{
-	width:90%;
-	margin-left:5%;
-	margin-right:5%;
-}
-
-.menu_dosen_tab{
-	font-size: 100%;
-	font: bold; 
-}
-
-.menu_dosen_table tr td.active {
-	background: rgba(255,255,255, 0.8);
-}
-
-.menu_dosen_table table tr td.active a{
-	color: #505050;
-	text-shadow: #FFF 2px 2px 2px;
-}
-
-.menu_dosen_table tr td a{
-	height: 50px;
-	text-decoration: none; 
-	color: #111111;
-}
-
-.menu_dosen_table tr td.active a{
-	color: #505050;
-	text-shadow: #FFF 2px 2px 2px;
-}
-
-.menu_dosen_table tr td{
-	background: rgba(0,0,0,0.3);
-	-moz-border-radius-bottomleft: 15px; 
-    -moz-border-radius-bottomright: 15px; 
-    -webkit-border-bottom-left-radius:15px;
-    -webkit-border-bottom-right-radius:15px;
-}
-
-.fancy_action_button {
-    -moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
-    -webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
-    box-shadow:inset 0px 0px 0px 0px #ffffff;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-    background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed',       endColorstr='#dfdfdf');
-    background-color:#ededed;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
-    display:inline-block;
-    color:#777777;
-    font-family:arial;
-    font-size:50%;
-    font-weight:bold;
-    width: 95%;
-    margin: 2%;
-    margin-left:-5px;
-    margin-right:10px;
-    padding: 1em  0px;
-    text-decoration:none;
-    text-shadow:1px 1px 0px #ffffff;
-}
-
-.fancy_action_button:active {
-	position:relative;
-	top:1px;
-}
-
-p.bottomContent{
-	margin-left:8%;
-	margin-right:8%;
-	margin-top:1%;
-	text-align:left;
-}
-
-
-/*
- * CSS for devices with BIG screen
-*/
-/*
-@media only screen 
-and (min-device-width : 480px)
-{
-	.statusbar{
-		margin-bottom: 5%;
-		font-size: 50%;
+	.socket_button {
+	    -moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	    -webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	    box-shadow:inset 0px 0px 0px 0px #ffffff;
+	    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #adadad) );
+	    background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
+	    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed',       endColorstr='#dfdfdf');
+	    background-color:#ededed;
+	    -moz-border-radius:1em;
+	    -webkit-border-radius:1em;
+	    border-radius:1em;
+	    display:inline-block;
+	    color:#777777;
+	    font-family:arial;
+	    font-weight:bold;
+	    text-decoration:none;
+	 	display:block;
+	 	margin-left:10%;
+	 	margin-right:10%;
+	 	margin-top:1em;
+	 	margin-bottom:1em;
+	 	width:80%;
 	}
 	
-	.socket_control{
-	    font-size: 150%;
+	.tableInsideButton{
+		width:100%;
+	}
+	
+	.status_icon_td{
+		width:5em;
+		padding:1%;
 	}
 	
 	.socket_status_picture{
-		height: 8%;
+		width:4em;
 	}
+	
+	.socket_text{
+		vertical-align:top;
+	}
+	
+		.table_socket_text{
+			width:100%;
+			height:100%;
+			vertical-align:top;
+		}
 		
-	.socket_name{
-		margin-top: 4%;
+		.socket_name{
+			padding-left:1em;
+			padding-top:1em;
+			padding-bottom:1em;
+		}
+	.socket_icon{
+		width:5em;
 	}
 	
-	.socket_device_icon{
-		height: 8%;
-	}
-	
-	#menu_tabs {
-		font-size: 70%;
-		padding-top: -5%;
-	}
-	
-	.menu_tab img{
-		height:100%;
-	}
-	
-	#menu_tabs ul li{
-		margin-top: -5%;
-		padding:5% 2% 2% 2%;
-	}
-	#menu_tabs table tr td{
-		padding:10px 10px 10px 10px;
-	}
-	.fancy_action_button {
-		padding: 1em 0px;
-		font-size: 70%;
-		margin-top: 10%;
-	}
-}
-*/
-.event.listening {
-    background-color:#333333;
-    display:block;
+		.socket_device_icon{
+			float:right;
+			width:5em;
+		}
+
+.menu_table {
+	width:100%;
+	table-layout: fixed;
 }
 
-.event.received {
-    background-color: #333333;/*#4B946A;*/
-    display:none;
+.tabs{
+	text-align:center;
 }
 
-.blink {
-    animation:fade 300ms infinite;
-    -webkit-animation:fade 300ms infinite;
-    width:100%;
+.menu_header_img{
+	width:5em;
+	vertical-align:middle;
+}
+
+.menu_table td{
+	background: rgba(0,0,0,0.3);
+	-moz-border-radius-topleft: 2em; 
+    -moz-border-radius-topright: 2em; 
+    -webkit-border-top-left-radius:2em;
+    -webkit-border-top-right-radius:2em;
+}
+.tabs{
+	height:8em;
+}
+
+td.active{
+	background: rgba(255,255,255,1);
+}
+
+
+#menu{
+    background-color:#404040;
+	bottom: 0em;
+	width:100%;
+	position:absolute;
 }
