--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,6 +126,8 @@ td.active{
     background-color:#404040;
 	bottom: 0em;
 	width:100%;
+    min-height:15%;
+    max-height:100%;
 	position:absolute;
 }
 
