--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,6 +130,26 @@ td.active{
 	position:absolute;
 }
 
+.dosen td{
+    height:2em !important;
+    -webkit-border-bottom-left-radius:2em;
+    -webkit-border-bottom-right-radius:2em;
+    -webkit-border-top-left-radius:0em;
+    -webkit-border-top-right-radius:0em;
+}
+.dosen{
+    width:80%;
+    margin-left:10%;
+    margin-right:10%;
+}
+
+.saveButton{
+    float:right;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #adadad) );
+    -webkit-border-top-left-radius:5em;
+    padding:1em;
+}
+
 .event.listening {
     background-color:#333333;
     display:block;
